--- a/app/src/main/res/layout/elemento_lista.xml
+++ b/app/src/main/res/layout/elemento_lista.xml
@@ -7,12 +7,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/imagen"
             android:layout_width="110dp"
             android:layout_height="110dp"
+            android:padding="5dp"
             app:srcCompat="@drawable/fetuccini_alfredo" />
 
         <LinearLayout
